--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="bg-info">
     <nav id="navbar">
       <div class="navbar_items">
         <a href="/" class="center_item">All Pets</a>
