--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -2,31 +2,47 @@
 
 <!-- content -->
 {% block content %} {% if pets %}
-<div class="page_container">
-  <div id="pets_container">
+<div class="container">
+  <div class="container-fluid">
+    <!-- TODO: eventually switch off page_title class. will need to impliment bootstrap navbar for spacing.-->
     <h2 class="page_title">Available Pets:</h2>
-    {% for pet in pets if pet.available %}
-    <div class="pet" id="pet_available">
-      <div class="img_container">
-        <img class="pet_home_img" src="{{pet.photo_url}}" alt="" />
+    <div class="row">
+      {% for pet in pets if pet.available %}
+      <div class="col-sm-6 col-lg-3">
+        <div class="card text-center p-2 mt-5">
+          <img src="{{pet.photo_url}}" alt="" class="card-img-top pet_img" />
+          <div class="card-body">
+            <h1>
+              <a href="/{{pet.id}}" class="card-title">{{pet.name}}</a>
+            </h1>
+            <h5><b class="badge text-bg-success">Available</b></h5>
+          </div>
+        </div>
       </div>
-      <h1><a href="/{{pet.id}}" class="pet_name_home">{{pet.name}}</a></h1>
-      <h2><b class="available">Available</b></h2>
+      {% endfor %}
     </div>
-    {% endfor %}
-    <h2 class="page_title">Unavailable Pets:</h2>
-    {% for pet in pets if not pet.available %}
-    <div class="pet" id="pet_unavailable">
-      <div class="img_container">
-        <img class="pet_home_img" src="{{pet.photo_url}}" alt="" />
+
+    <div class="container-fluid">
+      <!-- TODO: eventually switch off page_title class. will need to impliment bootstrap navbar for spacing.-->
+      <h2 class="page_title">Unavailable Pets:</h2>
+      <div class="row">
+        {% for pet in pets if not pet.available %}
+        <div class="col-sm-6 col-xl-3">
+          <div class="card text-center p-2 mt-5">
+            <img src="{{pet.photo_url}}" alt="" class="card-img-top pet_img" />
+            <div class="card-body">
+              <h1>
+                <a href="/{{pet.id}}" class="card-title">{{pet.name}}</a>
+              </h1>
+              <h5><b class="badge text-bg-danger">Unavailable</b></h5>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
       </div>
-      <h1><a href="/{{pet.id}}" class="pet_name_home">{{pet.name}}</a></h1>
-      <h2><b class="unavailable">Unavailable</b></h2>
     </div>
-    {% endfor %}
   </div>
   {% else %}
   <h2>Currently No Pets</h2>
-  {% endif %}
+  {% endif %} {% endblock %}
 </div>
-{% endblock %}
