--- a/templates/form.j2
+++ b/templates/form.j2
@@ -1,7 +1,10 @@
-{{form.hidden_tag()}} {% for field in form if field.widget.input_type !=
-    'hidden' %}
-    <p>
-      {{field.label}} {{field}} {% for error in field.errors %} {{error}} {%
-      endfor %}
-    </p>
+{{ form.hidden_tag() }}
+{% for field in form if field.widget.input_type != 'hidden' %}
+  <div class="mb-3">
+    <label for="{{ field.id }}" class="form-label">{{ field.label }}</label>
+    {{ field(class="form-control") }}
+    {% for error in field.errors %}
+      <div class="form-text text-danger">{{ error }}</div>
+    {% endfor %}
+  </div>
 {% endfor %}
