--- a/static/style.css
+++ b/static/style.css
@@ -9,34 +9,6 @@ body {
   justify-content: center;
 }
 
-/* NAVBAR */
-
-#navbar {
-  width: 100%;
-  height: 50px;
-  position: fixed;
-  background-color: rgb(22, 141, 244);
-  z-index: 5;
-}
-
-.navbar_items {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  padding-top: 10px;
-}
-
-.navbar_items a {
-  color: white;
-  text-decoration: none;
-  font-size: 1.3rem;
-}
-
-.navbar_items a:nth-child(2) {
-  border-left: 2px solid white;
-  padding-left: 15px;
-}
-
 .page_title {
   color: white;
   margin-top: 60px;
@@ -49,4 +21,8 @@ body {
   width: 400px;
   height: 400px;
   object-fit: cover;
+}
+
+.footer {
+  height: 70px;
 }
