--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,37 @@
     />
   </head>
   <body class="bg-info">
-    <nav id="navbar">
-      <div class="navbar_items">
-        <a href="/" class="center_item">All Pets</a>
-        <a href="/add" class="center_item">Add a Pet</a>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Adopt Today!</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" aria-current="page" href="/">All Pets</a>
+              <a class="nav-link" href="/add">Add a Pet</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+
+      {% for msg in get_flashed_messages() %}
+      <div class="alert alert-success text-light mt-5 pt-3 bg-success">
+        {{ msg }}
       </div>
-    </nav>
-    {% for msg in get_flashed_messages() %} {{ msg }} {% endfor %} {% block
-    content %} {% endblock %}
+      {% endfor %}{% block content %} {% endblock %}
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
+  <footer class="footer"></footer>
 </html>
